1
Intel(R) oneAPI DPC++/C++ Compiler 2022.2.0 (2022.2.0.20220730)
Target: x86_64-unknown-linux-gnu
Thread model: posix
InstalledDir: /opt/intel/oneapi/compiler/2022.2.0/linux/bin-llvm
Configuration file: /opt/intel/oneapi/compiler/2022.2.0/linux/bin/icpx.cfg
Found candidate GCC installation: /usr/lib/gcc/x86_64-linux-gnu/10
Found candidate GCC installation: /usr/lib/gcc/x86_64-linux-gnu/8
Found candidate GCC installation: /usr/lib/gcc/x86_64-linux-gnu/9
Selected GCC installation: /usr/lib/gcc/x86_64-linux-gnu/10
Candidate multilib: .;@m64
Selected multilib: .;@m64
 (in-process)
 "/opt/intel/oneapi/compiler/2022.2.0/linux/bin-llvm/clang++" -cc1 -triple x86_64-unknown-linux-gnu -emit-obj --mrelax-relocations -disable-free -clear-ast-before-backend -disable-llvm-verifier -discard-value-names -main-file-name test.cpp -mrelocation-model static -fveclib=SVML -mframe-pointer=none -menable-no-infs -menable-no-nans -fapprox-func -menable-unsafe-fp-math -fno-signed-zeros -mreassociate -freciprocal-math -fdenormal-fp-math=preserve-sign,preserve-sign -ffp-contract=fast -fno-rounding-math -ffast-math -ffinite-math-only -mconstructor-aliases -funwind-tables=2 -target-cpu x86-64 -mllvm -x86-enable-unaligned-vector-move=true -tune-cpu generic -mllvm -treat-scalable-fixed-error-as-warning -debugger-tuning=gdb -v -fcoverage-compilation-dir=/nfs/site/home/rscohn1/local/projects/spack/spack -resource-dir /opt/intel/oneapi/compiler/2022.2.0/linux/lib/clang/15.0.0 -I/opt/intel/oneapi/vpl/2022.2.0/include -I/opt/intel/oneapi/tbb/2021.7.0/env/../include -I/opt/intel/oneapi/mpi/2021.7.0//include -I/opt/intel/oneapi/mkl/2022.2.0/include -I/opt/intel/oneapi/ippcp/2021.6.1/include -I/opt/intel/oneapi/ipp/2021.6.1/include -I/opt/intel/oneapi/dpl/2021.7.1/linux/include -I/opt/intel/oneapi/dpcpp-ct/2022.2.0/include -I/opt/intel/oneapi/dnnl/2022.2.0/cpu_dpcpp_gpu_dpcpp/include -I/opt/intel/oneapi/dev-utilities/2021.7.0/include -I/opt/intel/oneapi/dal/2021.7.0/include -I/opt/intel/oneapi/ccl/2021.7.0/include/cpu_gpu_dpcpp -cxx-isystem /opt/intel/oneapi/clck/2021.7.0/include -internal-isystem /opt/intel/oneapi/compiler/2022.2.0/linux/bin-llvm/../compiler/include -internal-isystem /usr/lib/gcc/x86_64-linux-gnu/10/../../../../include/c++/10 -internal-isystem /usr/lib/gcc/x86_64-linux-gnu/10/../../../../include/x86_64-linux-gnu/c++/10 -internal-isystem /usr/lib/gcc/x86_64-linux-gnu/10/../../../../include/c++/10/backward -internal-isystem /opt/intel/oneapi/compiler/2022.2.0/linux/lib/clang/15.0.0/include -internal-isystem /usr/local/include -internal-isystem /usr/lib/gcc/x86_64-linux-gnu/10/../../../../x86_64-linux-gnu/include -internal-externc-isystem /usr/include/x86_64-linux-gnu -internal-externc-isystem /include -internal-externc-isystem /usr/include -O2 -fdeprecated-macro -fdebug-compilation-dir=/nfs/site/home/rscohn1/local/projects/spack/spack -ferror-limit 19 -fheinous-gnu-extensions -fgnuc-version=4.2.1 -fcxx-exceptions -fexceptions -vectorize-loops -vectorize-slp -D__GCC_HAVE_DWARF2_CFI_ASM=1 -fintel-compatibility -fintel-libirc-allowed -mllvm -disable-hir-generate-mkl-call -mllvm -loopopt=1 -floopopt-pipeline=light -mllvm -intel-abi-compatible=true -o test.o -x c++ ../test.cpp
clang -cc1 version 15.0.0 based upon LLVM 15.0.0git default target x86_64-unknown-linux-gnu
ignoring nonexistent directory "/usr/lib/gcc/x86_64-linux-gnu/10/../../../../x86_64-linux-gnu/include"
ignoring nonexistent directory "/include"
#include "..." search starts here:
#include <...> search starts here:
 /opt/intel/oneapi/vpl/2022.2.0/include
 /opt/intel/oneapi/tbb/2021.7.0/env/../include
 /opt/intel/oneapi/mpi/2021.7.0//include
 /opt/intel/oneapi/mkl/2022.2.0/include
 /opt/intel/oneapi/ippcp/2021.6.1/include
 /opt/intel/oneapi/ipp/2021.6.1/include
 /opt/intel/oneapi/dpl/2021.7.1/linux/include
 /opt/intel/oneapi/dpcpp-ct/2022.2.0/include
 /opt/intel/oneapi/dnnl/2022.2.0/cpu_dpcpp_gpu_dpcpp/include
 /opt/intel/oneapi/dev-utilities/2021.7.0/include
 /opt/intel/oneapi/dal/2021.7.0/include
 /opt/intel/oneapi/ccl/2021.7.0/include/cpu_gpu_dpcpp
 /opt/intel/oneapi/clck/2021.7.0/include
 /opt/intel/oneapi/compiler/2022.2.0/linux/bin-llvm/../compiler/include
 /usr/lib/gcc/x86_64-linux-gnu/10/../../../../include/c++/10
 /usr/lib/gcc/x86_64-linux-gnu/10/../../../../include/x86_64-linux-gnu/c++/10
 /usr/lib/gcc/x86_64-linux-gnu/10/../../../../include/c++/10/backward
 /opt/intel/oneapi/compiler/2022.2.0/linux/lib/clang/15.0.0/include
 /usr/local/include
 /usr/include/x86_64-linux-gnu
 /usr/include
End of search list.
../test.cpp:2:3: error: use of undeclared identifier 'foobar'
  foobar();
  ^
1 error generated.
